--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
         <p class="lead fst-italic">
           "If you don’t like to read, you haven’t found the right book."
         </p>
-        <p>
+        <p class="text-secondary">
           <b class="bi-dash-lg"></b>
           J. K. Rowling
         </p>
