--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,31 +2,27 @@
 
 <section id="dashboard">
   <div class="container px-sm-5 my-4">
+    <h4>Dashboard</h4>
     <div class="row">
-      <% for( let index = 0; index < 5; index++ ) { %>
-      <div class="col-md-9 mx-auto">
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img
-                src="
-              https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.r-UF3h84JiIwOhrUjSSe3QHaE8%26pid%3DApi&f=1 "
-                class="img-fluid rounded-start"
-                alt="..."
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Book title</h5>
-                <p class="card-text">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Harum debitis ipsum libero! Minus, deserunt quis.
-                </p>
-                <p class="card-text">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </p>
-              </div>
-            </div>
+      <% for( let index = 0; index < 6; index++ ) { %>
+      <div class="col-md-6 col-lg-4 my-2">
+       
+        <div class="card text-white border">
+          <img
+            src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.nVJhjSlSlhvuiLrY0I3h5QHaE9%26pid%3DApi&f=1"
+            class="card-img object-fit-cover"
+            alt="..."
+          />
+          <div class="card-img-overlay bg-color-1">
+            <h4 class="card-title">Book title</h4>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque,
+              molestiae minus impedit maiores repudiandae nesciunt.
+            </p>
+
+            <a href="#" class="btn btn-dark"
+              ><i class="bi-chevron-right me-1"></i>Read More</a
+            >
           </div>
         </div>
       </div>
