--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <section id="home">
   <div class="container px-sm-5">
     <div class="row">
-      <div class="col-md my-auto">
+      <div class="col-md my-auto text-center text-md-start">
         <h1>Find your Perfect Book here!</h1>
         <p class="lead fst-italic">
           "If you don’t like to read, you haven’t found the right book."
@@ -12,6 +12,7 @@
           <b class="bi-dash-lg"></b>
           J. K. Rowling
         </p>
+        <a class="btn btn-success " href="/dashboard"><i class="bi-chevron-right me-1"></i>Explore</a>
       </div>
       <div class="col-md d-flex align-items-center justify-content-center">
         <%- include ("./components/book.svg.ejs") %>
