--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-<section class=" border-top border-secondary mx-5 my-3 text-center px-3 pt-3 pb-0">
+<section class=" border-top mx-5 my-3 text-center px-3 pt-3 pb-0">
     <p class="text-secondary">
         Copyright ©, 2021
         <a
@@ -10,6 +10,7 @@
         Nikhil Gupta
         </a>
     </p>
+</div>
 </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous" defer></script>
