Configure register routes and error messages

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md text-center"><%- include("./components/404.svg.ejs") %></div>
+    <div class="col-md text-center"><%- include("./components/svg/404.svg.ejs") %></div>
   </div>
 </div>
 
