--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,10 +12,12 @@
           <b class="bi-dash-lg"></b>
           J. K. Rowling
         </p>
-        <a class="btn btn-success " href="/dashboard"><i class="bi-chevron-right me-1"></i>Explore</a>
+        <a class="btn btn-success" href="/dashboard"
+          ><i class="bi-chevron-right me-1"></i>Explore</a
+        >
       </div>
       <div class="col-md d-flex align-items-center justify-content-center">
-        <%- include ("./components/book.svg.ejs") %>
+        <%- include ("./components/svg/book.svg.ejs") %>
       </div>
     </div>
   </div>
