--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       <a class="navbar-brand fs-4 text-success" href="/home">
         <i class="bi-book me-1"></i>
-        <span>Books Hub</span></a
+        <span>Book Hub</span></a
       >
       <button
         class="navbar-toggler"
