--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,9 @@
               type="email"
               class="form-control rounded"
               id="floatingInput"
+              name="email"
               placeholder="name@example.com"
+              autofocus="true"
               required
             />
 
@@ -27,6 +29,7 @@
               type="password"
               class="form-control rounded"
               id="floatingPassword"
+              name="password"
               placeholder="Password"
               required
             />
