--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,7 +2,9 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md text-center"><%- include("./components/svg/404.svg.ejs") %></div>
+    <div class="col-12 col-md-8 col-lg-7 mx-auto text-center">
+      <img src="/img/svg/404.svg" alt="" />
+    </div>
   </div>
 </div>
 
