--- a/views/auth-views/register.ejs
+++ b/views/auth-views/register.ejs
@@ -1,4 +1,4 @@
-<%- include ("partials/header.ejs") %>
+<%- include ("../partials/header.ejs") %>
 
 <section id="register">
   <div class="container mt-3 mb-5 px-sm-5">
@@ -15,7 +15,7 @@
             <label for="inputEmail" class="form-label">Email address</label>
             <input
               type="email"
-              class="form-control rounded-pill"
+              class="form-control"
               id="inputEmail"
               name="email"
               aria-describedby="emailHelp"
@@ -27,7 +27,7 @@
             <label for="inputPassword" class="form-label">Password</label>
             <input
               type="password"
-              class="form-control rounded-pill"
+              class="form-control"
               id="inputPassword"
               name="password"
               placeholder="Must be 6-20 characters long."
@@ -39,7 +39,7 @@
             >
             <input
               type="password"
-              class="form-control rounded-pill"
+              class="form-control"
               id="inputPassword2"
               name="password2"
             />
@@ -51,4 +51,4 @@
     </div>
   </div>
 </section>
-<%- include ("partials/footer.ejs") %>
+<%- include ("../partials/footer.ejs") %>
