--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
         >
       </div>
       <div class="col-md d-flex align-items-center justify-content-center">
-        <%- include ("./components/svg/book.svg.ejs") %>
+        <img src="/img/svg/book.svg" alt="">
       </div>
     </div>
   </div>
