--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,9 +1,8 @@
 <div class="container px-sm-5 py-3">
   <nav class="navbar navbar-expand-sm navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand fs-4 text-success" href="/home">
-        <i class="bi-book me-1"></i>
-        <span>Book Hub</span></a
+      <a class="navbar-brand fs-4 text-color-1" href="/home">
+        <span>📚 Books Hub</span></a
       >
       <button
         class="navbar-toggler"
