--- a/views/auth-views/login.ejs
+++ b/views/auth-views/login.ejs
@@ -1,4 +1,4 @@
-<%- include ("partials/header.ejs") %>
+<%- include ("../partials/header.ejs") %>
 
 <section id="login">
   <div class="container mt-3 mb-5 px-sm-5">
@@ -43,4 +43,4 @@
   </div>
 </section>
 
-<%- include ("partials/footer.ejs") %>
+<%- include ("../partials/footer.ejs") %>
