--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,15 +2,15 @@
 <section id="dashboard">
   <div class="container px-sm-5 mt-2 mb-4">
     <%- include ("./components/user.navbar.ejs") %>
-    
+
     <div class="row">
       <% for( let index = 0; index < 6; index++ ) { %>
       <div class="col-md-6 col-lg-4 my-2">
-        <div class="card text-white border">
+        <div class="card text-white border border-0 shadow">
           <img
-            src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.nVJhjSlSlhvuiLrY0I3h5QHaE9%26pid%3DApi&f=1"
-            class="card-img object-fit-cover"
-            alt="..."
+            src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg.freepik.com%2Ffree-photo%2Ffront-view-pile-books-with-copy-space_23-2148255858.jpg%3Fsize%3D626%26ext%3Djpg&f=1&nofb=1"
+            class="card-img object-fit-cover skeleton"
+            alt="Wait"
           />
           <div class="card-img-overlay bg-color-1">
             <h4 class="card-title">Book title</h4>
@@ -19,7 +19,7 @@
               molestiae minus impedit maiores repudiandae nesciunt.
             </p>
 
-            <a href="#" class="btn btn-dark"
+            <a href="#" class="btn btn-light"
               ><i class="bi-chevron-right me-1"></i>Read More</a
             >
           </div>
