--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,37 @@
   box-shadow: 0 0 0 0.1rem #198754 !important;
 }
 
+.skeleton {
+  animation: skeleton-loading 1s linear infinite alternate-reverse;
+}
+
+.skeleton-text {
+  width: 100%;
+  height: 0.75rem;
+  margin-bottom: 0.25rem;
+  border-radius: 0.125rem;
+}
+
+.skeleton-text:last-child {
+  margin-bottom: 0;
+  width: 80%;
+}
+
+.skeleton-button {
+  width: 29.5%;
+  height: 2.5rem;
+  border-radius: 0.25rem;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 70%);
+  }
+
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
+}
 
 .object-fit-cover {
   object-fit: cover;
@@ -27,5 +58,13 @@
 }
 
 .bg-color-1 {
-background-color: rgba(0,0,0,0.1);
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0)
+  ) !important;
+}
+
+.card {
+  border: 0 !important;
 }
