--- a/views/auth-views/login.ejs
+++ b/views/auth-views/login.ejs
@@ -10,7 +10,7 @@
           Don't have an account?
           <a href="/register" class="text-decoration-none">Register here!</a>
         </p>
-        <form>
+        <form action="/login">
           <div class="form-floating mb-3">
             <input
               type="email"
@@ -23,6 +23,12 @@
 
             <label for="floatingInput">Email address</label>
           </div>
+          <div class="mb-3">
+            <div
+              class="alert alert-warning text-center email-error"
+              role="alert"
+            ></div>
+          </div>
           <div class="form-floating my-3">
             <input
               type="password"
@@ -33,12 +39,62 @@
             />
             <label for="floatingPassword">Password</label>
           </div>
+          <div class="mb-3">
+            <div
+              class="alert alert-warning text-center password-error"
+              role="alert"
+            ></div>
+          </div>
 
           <button type="submit" class="btn btn-dark">Submit</button>
         </form>
       </div>
     </div>
   </div>
+
+  <script>
+    const form = document.querySelector("form");
+
+    const emailError = document.querySelector(".email-error");
+    const passwordError = document.querySelector(".password-error");
+
+    emailError.classList.add("d-none");
+    passwordError.classList.add("d-none");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      // get values
+      const email = form.email.value;
+      const password = form.password.value;
+      try {
+        const res = await fetch("/login", {
+          method: "POST",
+          body: JSON.stringify({ email, password }),
+          headers: { "Content-Type": "application/json" },
+        });
+
+        const data = await res.json();
+
+        if (data.errors) {
+          if (data.errors.email) {
+            emailError.classList.remove("d-none");
+            emailError.textContent = data.errors.email;
+          }
+
+          if (data.errors.password) {
+            passwordError.classList.remove("d-none");
+            passwordError.textContent = data.errors.password;
+          }
+        }
+
+        if (data.user) {
+          location.assign("/");
+        }
+      } catch (error) {
+        console.log(error);
+      }
+    });
+  </script>
 </section>
 
 <%- include ("../partials/footer.ejs") %>
