--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,36 +1,34 @@
-<div class="container px-sm-5 py-3">
+<div class="container-fluid px-sm-5 py-3">
   <nav class="navbar navbar-expand-sm navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand fs-4 text-color-1" href="/home">
-        <span>📚 Books Hub</span></a
-      >
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-      >
-        <i class="bi-text-right text-dark"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav text-center ms-auto">
-          <li class="nav-item">
-            <a
-              class="nav-link fw-bold px-4 me-sm-2 text-dark"
-              aria-current="page"
-              href="/home"
-              >Home</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link fw-bold px-4 text-light rounded-pill bg-dark"
-              href="/login"
-              >Login</a
-            >
-          </li>
-        </ul>
-      </div>
+    <a class="navbar-brand fs-4 text-color-1" href="/home">
+      <span>📚 Books Hub</span></a
+    >
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+    >
+      <i class="bi-text-right text-dark"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav text-center ms-auto">
+        <li class="nav-item">
+          <a
+            class="nav-link fw-bold px-4 me-sm-2 text-dark"
+            aria-current="page"
+            href="/home"
+            >Home</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link fw-bold px-4 text-light rounded-pill bg-dark"
+            href="/login"
+            >Login</a
+          >
+        </li>
+      </ul>
     </div>
   </nav>
 </div>
