Add checkUser and isAuthenticated middleware

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -28,6 +28,13 @@
             >Login</a
           >
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link fw-bold px-4 text-light rounded-pill bg-dark"
+            href="/logout"
+            >Logout</a
+          >
+        </li>
       </ul>
     </div>
   </nav>
